--- a/breakconnect/templates/breakconnect/start-break.html
+++ b/breakconnect/templates/breakconnect/start-break.html
@@ -225,13 +225,19 @@
           <div class="component-heade-obal-navigation-bdw52J">
             <div class="component-heade-obal-navigation-W4A8Nw">
               <div class="component-heade-global-nav-item-Sp4knt">
-                <div class="component-heade-global-nav-item-a6SLZt ibmplexsans-normal-charade-16px">Account</div>
+                <div class="component-heade-global-nav-item-a6SLZt ibmplexsans-normal-charade-16px">
+                  <a href="{% url 'sign-out' %}">Sign Out</a>
+                </div>
               </div>
               <div class="component-heade-global-nav-item-9115Dx">
-                <div class="component-heade-global-nav-item-L5Zhlx ibmplexsans-normal-charade-16px">Schedule</div>
+                <div class="component-heade-global-nav-item-L5Zhlx ibmplexsans-normal-charade-16px">
+                  <a href="{% url 'breakconnect:start-chat' %}">Start Chat</a>
+                </div>
               </div>
               <div class="component-heade-global-nav-item-rDnUzp">
-                <div class="component-heade-global-nav-item-aI4v3Y ibmplexsans-normal-charade-16px">Catchups</div>
+                <div class="component-heade-global-nav-item-aI4v3Y ibmplexsans-normal-charade-16px">
+                  <a href="#">Account</a>
+                </div>
               </div>
             </div>
           </div>
@@ -314,7 +320,7 @@
         <div class="group-2-dXBp89">
           <div class="component-chart-ace-donut-chart-P4lque">
             <div class="component-chart-ace-donut-chart-OYb3hV">
-              <img class="base-lQM3Eg" src="{% static 'breakconnect/img/base-9@1x.png' %}" />
+              <img class="base-lQM3Eg" style="z-index:-5;" src="{% static 'breakconnect/img/base-9@1x.png' %}" />
               <div class="description-lQM3Eg">What have you been up to recently?</div>
               <div class="component-chart-ator-horizontal-lQM3Eg">
                 <div class="component-chart-ator-horizontal-rxTDR2"></div>
