--- a/breakconnect/templates/breakconnect/start-break.html
+++ b/breakconnect/templates/breakconnect/start-break.html
@@ -328,12 +328,16 @@
               </div>
               <div class="component-chart-title-text-lQM3Eg">
                 <div class="component-card-hart-title-text-cawODj">
-                  <div class="component-chart-bar-title-lDBlw8 ibmplexsans-bold-charade-34px">Start break</div>
+                  <div class="component-heade-global-nav-item-a6SLZt ibmplexsans-normal-charade-16px">
+                    <div class="component-heade-global-nav-item-L5Zhlx ibmplexsans-normal-charade-16px">
+                      <a href="{% url 'breakconnect:start-chat' %}">Start Chat</a>
+                  </div>
+                </div>
                 </div>
               </div>
               <div class="component-chart-lobal-title-bar-lQM3Eg">
                 <div class="component-chart-lobal-title-bar-xfTNx1">
-                  <div class="bar-title-WtFyqJ ibmplexsans-medium-storm-gray-16px">3/4/21</div>
+                  <div class="bar-title-WtFyqJ ibmplexsans-medium-storm-gray-16px">5/4/21</div>
                 </div>
               </div>
             </div>
@@ -341,8 +345,10 @@
           <a href="javascript:SubmitForm('form1')">
             <div class="controls-button-e-accent-normal-P4lque smart-layers-pointers">
               <div class="controls-button-e-accent-normal-vogk1Y">
+                <a href = "{% url 'breakconnect:start-chat' %}">
                   <img class="base-WYBrCY" src="{% static 'breakconnect/img/base-10@1x.png' %}" />
-                <div class="button-WYBrCY ibmplexsans-medium-aqua-haze-16px">Start</div>
+                  <div class="button-WYBrCY ibmplexsans-medium-aqua-haze-16px">Start</div>
+                </a>
               </div>
             </div>
           </a>
