get white box back in start menus

--- a/breakconnect/templates/breakconnect/start-chat.html
+++ b/breakconnect/templates/breakconnect/start-chat.html
@@ -220,17 +220,17 @@
               <div class="component-heade-obal-navigation-W4A8Nw">
                 <div class="component-heade-global-nav-item-Sp4knt">
                   <div class="component-heade-global-nav-item-a6SLZt ibmplexsans-normal-charade-16px">
-                    <a href="{% url 'sign-out' %}">Sign Out</a>
+                    <a style="z-index:1;" href="{% url 'sign-out' %}">Sign Out</a>
                   </div>
                 </div>
                 <div class="component-heade-global-nav-item-9115Dx">
                   <div class="component-heade-global-nav-item-L5Zhlx ibmplexsans-normal-charade-16px">
-                    <a href="{% url 'breakconnect:start-break' %}">Start Break</a>
+                    <a style="z-index:1;" href="{% url 'breakconnect:start-break' %}">Start Break</a>
                   </div>
                 </div>
                 <div class="component-heade-global-nav-item-rDnUzp">
                   <div class="component-heade-global-nav-item-aI4v3Y ibmplexsans-normal-charade-16px">
-                    <a href="#">Account</a>
+                    <a style="z-index:1;"href="#">Account</a>
                   </div>
                 </div>
               </div>
@@ -247,8 +247,10 @@
                 <div class="component-card-place-card-fill-Oa6pbv smart-layers-pointers">
                   <div class="component-card-place-card-fill-9GU6YE">
                       <div class="base-wu1M9z">
-                        <img class="mask-VApPm7" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
-                        <img class="base-VApPm7" src="{% static 'breakconnect/img/base-42@1x.png' %}" />
+                        <img class="mask-VApPm7" style="z-index:-0;" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
+                        <a href="http://127.0.0.1:8000/chat/1">
+                          <img class="base-VApPm7" src="{% static 'breakconnect/img/base-42@1x.png' %}" />
+                        </a>
                       </div>
                       <div class="component-card-bal-light-title-wu1M9z">
                         <div class="component-card-bal-light-title-uZscfi ibmplexsans-bold-white-28px">Mark</div>
@@ -260,7 +262,7 @@
                       </div>
                       <div class="icon-wu1M9z">
                         <div class="icon-more-xYnD2f">
-                          <img class="mask-E7awNf" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
+                          <img class="mask-E7awNf" style="z-index:-0;" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
                           <img class="icon-more-E7awNf" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
                       </div>
                     </div>
@@ -271,8 +273,10 @@
                 <div class="component-card-place-card-fill-EaXLBm smart-layers-pointers">
                   <div class="component-card-place-card-fill-XJ3yhz">
                       <div class="base-wlDaJx">
-                        <img class="mask-ewCxtx" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
-                        <img class="base-ewCxtx" src="{% static 'breakconnect/img/base-44@1x.png' %}" />
+                        <img class="mask-ewCxtx" style="z-index:-0;" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
+                        <a href="http://127.0.0.1:8000/chat/3/">
+                          <img class="base-ewCxtx" src="{% static 'breakconnect/img/base-44@1x.png' %}" />
+                        </a>
                       </div>
                       <div class="component-card-bal-light-title-wlDaJx">
                         <div class="component-card-bal-light-title-RKAI3L ibmplexsans-bold-white-28px">Samantha</div>
@@ -284,7 +288,7 @@
                       </div>
                       <div class="icon-wlDaJx">
                         <div class="icon-more-KwxQxu">
-                          <img class="mask-xjJ49D" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
+                          <img class="mask-xjJ49D" style="z-index:-0;" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
                           <img class="icon-more-xjJ49D" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
                         </div>
                     
@@ -298,8 +302,10 @@
                 <div class="component-card-place-card-fill-Eyzx5u smart-layers-pointers">
                   <div class="component-card-place-card-fill-bvxr64">
                       <div class="base-vwdeES">
-                        <img class="mask-2xdTx2" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
-                        <img class="base-2xdTx2" src="{% static 'breakconnect/img/base-29@1x.png' %}" />
+                        <img class="mask-2xdTx2" style="z-index:-0;" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
+                        <a href="http://127.0.0.1:8000/chat/2/">
+                          <img class="base-2xdTx2" src="{% static 'breakconnect/img/base-29@1x.png' %}" />
+                        </a>
                       </div>
                       <div class="component-card-bal-light-title-vwdeES">
                         <div class="component-card-bal-light-title-COwMXj ibmplexsans-bold-white-28px">Mary</div>
@@ -311,7 +317,7 @@
                       </div>
                       <div class="icon-vwdeES">
                         <div class="icon-more-aGfvKJ">
-                          <img class="mask-Hkkn1q" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
+                          <img class="mask-Hkkn1q" style="z-index:-0;" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
                           <img class="icon-more-Hkkn1q" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
                         </div>
                     
@@ -323,8 +329,10 @@
                 <div class="component-card-place-card-fill-zoznYY smart-layers-pointers">
                   <div class="component-card-place-card-fill-uHism7">
                       <div class="base-MnkzXL">
-                        <img class="mask-KTN09D" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
-                        <img class="base-KTN09D" src="{% static 'breakconnect/img/base-45@1x.png' %}" />
+                        <img class="mask-KTN09D" style="z-index:-0;" src="{% static 'breakconnect/img/mask-1@1x.png' %}" />
+                        <a href="http://127.0.0.1:8000/chat/4/">
+                          <img class="base-KTN09D" src="{% static 'breakconnect/img/base-45@1x.png' %}" />
+                        </a>
                       </div>
                       <div class="component-card-bal-light-title-MnkzXL">
                         <div class="component-card-bal-light-title-DBdwPk ibmplexsans-bold-white-28px">John</div>
@@ -336,7 +344,7 @@
                       </div>
                       <div class="icon-MnkzXL">
                         <div class="icon-more-UpTd2x">
-                          <img class="mask-2HZVUw" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
+                          <img class="mask-2HZVUw" style="z-index:-0;" src="{% static 'breakconnect/img/mask-3@1x.png' %}" />
                           <img class="icon-more-2HZVUw" src="{% static 'breakconnect/img/icon-more@1x.png' %}" />
                         </div>
                     
@@ -349,7 +357,7 @@
           <div class="group-5-dXBp89">
             <div class="component-chart-ace-donut-chart-wbR61n">
               <div class="component-chart-ace-donut-chart-grpQ9Z">
-                <img class="base-tqJOii" style="z-index:-5;" src="{% static 'breakconnect/img/base-9@1x.png' %}" />
+                <img class="base-tqJOii" style="z-index:-0;" src="{% static 'breakconnect/img/base-9@1x.png' %}" />
                 <div class="description-tqJOii">Don&#39;t be shy, choose a co-worker to start a chat!</div>
                 <div class="component-chart-ator-horizontal-tqJOii">
                   <div class="component-chart-ator-horizontal-xVJ1U2"></div>
